# maimai-to-tachi

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: poetry-build.yml  static-analysis.yml
maimai_to_tachi/: config.py  difficulty.py  logging_config.py  main.py  score.py  spreadsheet.py  tachi.py
maimai_to_tachi/api/: README.md  main_api.py
maimai_to_tachi/api/models/: dan_rank.py  score.py
maimai_to_tachi/api/models/enums/: difficulty.py
maimai_to_tachi/api/routers/: dev.py
maimai_to_tachi/dataclasses/: dan_rank.py  difficulty.py  score.py
maimai_to_tachi/tools/: dump_charts_from_xls.py  post_to_kamaitachi.py
