[tool.poetry]
name = "maimai-to-tachi"
version = "0.1.0"
description = "A script for exporting scores from the maimai Finale score spreadsheet"
authors = ["corndogit <admin@corndogit.dev>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gspread = "^6.1.4"
dacite = "^1.8.1"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-annotations = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
