[tool.poetry]
name = "maimai-to-tachi"
version = "0.1.1"
description = "A script for exporting scores from the maimai Finale score spreadsheet"
authors = ["corndogit <admin@corndogit.dev>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gspread = "^6.1.4"
dacite = "^1.8.1"
types-requests = "^2.32.0.20241016"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-annotations = "^3.1.1"
mypy = "^1.15.0"
pandas = "^2.2.3"
pandas-stubs = "^2.2.3.250308"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
